# manga-web-app

./: .gitignore
manga-application-client/: package-lock.json  package.json
manga-application-client/src/: App.vue  color_funcs.js  main.js
manga-application-client/src/assets/: base.scss  colors.scss
manga-application-client/src/components/: TopSearchBar.vue  index.js  topFooter.vue  topHeader.vue
manga-application-client/src/components/buttons/: accentButton.vue  navButton.vue  seriousButton.vue  squareNavButton.vue  themeSwitchButton.vue
manga-application-client/src/components/headerSearch/: headerInput.vue
manga-application-client/src/components/icons/: IconHome.vue
manga-application-client/src/components/inputs/: fullWidthInput.vue  imageInput.vue  tagSelect.vue
manga-application-client/src/components/links/: oneLineLink.vue
manga-application-client/src/router/: index.js
manga-application-client/src/views/: AboutView.vue  CatalogView.vue  HomeView.vue  TitleView.vue
manga-application-server/: constant_data.py  main.py  pyproject.toml
manga-application-server/api/: __init__.py  comment_router.py  jenres_router.py  tags_router.py  title_router.py  user_router.py  vue_router.py
manga-application-server/assets/: image_funcs.py
manga-application-server/auth/: auth.py  database.py  manager.py  schemas.py
manga-application-server/core/: config.py  pydantic_entities.py
manga-application-server/db/: db.py  entities.py  notes.txt  session.py  tables.py
manga-application-server/db/logger/: __init__.py
manga-application-server/routes/: title.py
(+12 files in other folders)
